--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/muckitymuck/profileupdate3000#readme",
   "dependencies": {
+    "dotenv": "^15.0.0",
     "twitter-api-client": "^1.5.1"
   }
 }
