--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "profileupdate3000",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
@@ -22,6 +22,7 @@
     "dotenv": "^15.0.0",
     "node-fetch": "^3.2.0",
     "nodemon": "^2.0.15",
+    "number-to-emoji": "^1.0.0",
     "twit": "^2.2.11",
     "twitter-api-client": "^1.5.1",
     "twitter-lite": "^1.1.0"
